2020-01-30  Yusuke Suzuki  <ysuzuki@apple.com>

        [WTF] Remove PackedIntVector
        https://bugs.webkit.org/show_bug.cgi?id=207018

        Reviewed by Mark Lam.

        Simply removing PackedIntVector since (1) nobody uses it, (2) it is somewhat broken (like, size()), and (3) its implementation is not so efficient.
        If we want to have this feature, we can recreate it.

        * WTF.xcodeproj/project.pbxproj:
        * wtf/CMakeLists.txt:
        * wtf/PackedIntVector.h: Removed.

2020-01-30  Jonathan Bedard  <jbedard@apple.com>

        PAL: Remove old iOS version macros
        https://bugs.webkit.org/show_bug.cgi?id=206905

        Reviewed by Darin Adler.

        * wtf/PlatformHave.h: Add HAVE(NSPROGRESS_PUBLISHING_SPI).

2020-01-28  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Should use light theme unless website declares support for dark themes in color-schemes property
        https://bugs.webkit.org/show_bug.cgi?id=197947

        Reviewed by Michael Catanzaro.

        Do not define HAVE_OS_DARK_MODE_SUPPORT for the GTK port.

        * wtf/PlatformHave.h:

2020-01-28  Jonathan Bedard  <jbedard@apple.com>

        WebCore: Guard uneven corners in rounded rectangles
        https://bugs.webkit.org/show_bug.cgi?id=206838

        Reviewed by Darin Adler.

        * wtf/PlatformHave.h: Add HAVE(CG_PATH_UNEVEN_CORNERS_ROUNDEDRECT).

2020-01-27  Jonathan Bedard  <jbedard@apple.com>

        WebCore: Remove iOS 11 macros from RenderThemeIOS.mm
        https://bugs.webkit.org/show_bug.cgi?id=206787

        Reviewed by Darin Adler.

        * wtf/PlatformHave.h: Add HAVE(SYSTEM_FONT_STYLE_TITLE_0) and HAVE(SYSTEM_FONT_STYLE_TITLE_4).

2020-01-27  Jonathan Bedard  <jbedard@apple.com>

        Fix OpenSource iphoneos arm64e build
        https://bugs.webkit.org/show_bug.cgi?id=206703

        Reviewed by Yusuke Suzuki.

        * wtf/PlatformUse.h: Add USE(DARWIN_REGISTER_MACROS) check.
